# quimby

./: .hgignore  AABC.hpp  CMakeLists.txt  Doxyfile  GadgetFile.cpp  Grid.hpp  Licence.txt  Manual.md  Manual.rst  Octree.hpp  Vector3.hpp  arguments.hpp  gadget-config.in  kernel.hpp  main.cpp  paged_grid.cpp
doc/: Doxyfile  Makefile  api.GadgetFile.rst  api.rst  cli.rst  concepts.rst  conf.py  examples.rst  features.rst  index.rst  setup.rst
docs/: Manual.rst
extra/: Makefile.static
include/gadget/: AABB.h  AABB.hpp  AABC.h  AABC.hpp  Database.h  GadgetFile.h  GadgetFile.hpp  Grid.h  Grid.hpp  HCube.h  Index3.h  Index3.hpp  MagneticField.h  MagneticField.hpp  MultiResolutionMagneticField.h  Octree.h  Octree.hpp  PagedGrid.h  PagedGrid.hpp  Referenced.h  SPHGrid.h  SPHGrid.hpp  SmoothParticle.h  SmoothParticle.hpp  Vector3.h  Vector3.hpp  kernel.h  kernel.hpp  transpose.h
include/quimby/: AABB.h  AABC.h  Database.h  GadgetFile.h  Grid.h  HCube.h  HCubeMagneticField.h  Index3.h  MMapFile.h  MagneticField.h  MurmurHash2.h  Octree.h  PagedGrid.h  Referenced.h  SPHGrid.h  SmoothParticle.h  Vector3.h  tga.h
python/: gadget.i  quimby.i
src/: Database.cpp  GadgetFile.cpp  MMapFile.cpp  MagneticField.cpp  MultiResolutionMagneticField.cpp  tga.cpp  transpose.c
test/: Readme.txt  benchmark.cpp  coma_profile.cpp  coma_profile_dolag.csv  coma_profile_plot_rho.py  coma_profile_plot_weighted.py  database_test.cpp  hcube_test.cpp  mf_test.cpp  pg_test.cpp  sph_grid_test.cpp
tool/: arguments.h  arguments.hpp  bfieldtest.cpp  database.cpp  lmf.cpp  main.cpp  mass.cpp  mrmf.cpp  paged_grid.cpp  sph-dump.cpp  sph.cpp
